--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="assets/styles.css">
 <link rel="icon" href="images/logo.png">
 <meta name="data-ein" content="990700730">
+<meta name="facebook-domain-verification" content="bywfrbs14hdx3l2mff0rp77k9wgvhq" />
 <meta name="data-name" content="Caring Across Communities, Inc.">
   <meta name="description" content="Dedicated to community services, education, and direct relief, Caring Across Communities, Inc.">
 </head><body>
